EQEMu Changelog (Started on Sept 24, 2003 15:50)
-------------------------------------------------------
==07/14/2011==
Caryatis: Implemented the Extra Skill Damage itembonus(+bash, +kick dmg)

Optional SQL:
utils/sql/svn/1972_optional_extradmg_item_cap.sql

==07/14/2011==
Leere: Fix for reading books in SoF and later clients.

==07/13/2011==
Derision: OP_DisciplineUpdate for SoF and Underfoot (expanded Disc struct in UF player profile, added encode for Disc update).

==07/12/2011==
Caryatis: Added Perl Object: $mob->SetBodyType(bodytype).
Caryatis: Fixed issue with swarm(and wake the dead) pets where they would not despawn if they spawned as the target died.
Caryatis: Changed when mobs enrage to 9%(from 14%) to match live, with a rule to customize the value if wanted.
Caryatis: Added rule to allow matching of new live rules for enrage(it was removed from all non player-pet npcs).

Optional SQL:
utils/sql/svn/1968_optional_enrage_rules.sql

==07/11/2011==
erde: FreeBSD compile fix for Rev1963 (no strncpy in FreeBSD).

==07/10/2011==
Derision: Underfoot - Support for /emote
Derision: Underfoot - Support for Guild Creation via new window in Underfoot.
Derision: SoD+ - Changing group leader should update Group Leadership AA to that of the new leader.
Caryatis: Live like focus effect behaviour added(Improved Damage, Healing and Reduce Manacost focus effects will now be random if the spell contains both a min(effect_base_value) and max value(effect_limit_value)

Optional SQL:

utils/sql/svn/1962_optional_guild_creation_window_rules.sql
utils/sql/svn/1963_optional_rule_live_like_focuses.sql

==07/09/2011==
Derision: Underfoot - Instrument modifiers / AAs should now improve runspeed.

==07/06/2011==
Trevius: Fix for EVENT_ITEM_CLICK_CAST bugging Titanium clients.

==07/05/2011==
Trevius: Fix for EVENT_ITEM_CLICK_CAST for SoF+ clients.
Trevius: (Akkadius) Added new rule Console:SessionTimeOut for adjusting console session timeout.
